@@ -1,0 +1,29 @@
+
+if WITH_TESTS
+TESTS_DIR = tests
+else
+TESTS_DIR = 
+endif
+
+SUBDIRS = $(TESTS_DIR)
+
+INCLUDES = -I$(top_builddir) \
+	-I$(top_srcdir) \
+    $(LIBCRYPTUI_CFLAGS)
+
+lib_LTLIBRARIES = libcryptui.la
+
+BUILT_SOURCES = \
+	cryptui-marshal.c cryptui-marshal.h
+    
+libcryptui_la_SOURCES = \
+    cryptui.h \
+    cryptui-keyset.h cryptui-keyset.c \
+    $(BUILT_SOURCES)
+        
+cryptui-marshal.h: cryptui-marshal.list $(GLIB_GENMARSHAL)
+	$(GLIB_GENMARSHAL) $< --header --prefix=cryptui_marshal > $@
+
+cryptui-marshal.c: cryptui-marshal.list $(GLIB_GENMARSHAL)
+	echo "#include \"cryptui-marshal.h\"" > $@ && \
+	$(GLIB_GENMARSHAL) $< --body --prefix=cryptui_marshal >> $@
