@@ -1,5 +1,12 @@
 2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * Makefile.am:
+    * configure.in:
+    * libcryptui/*:
+    * libcryptui/tests/*: Beginnings of libcryptui
+
+2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
+
     * Merged changes from stable branch: seahorse-0-8
  
 2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
